<resources>
    <!-- Informations de l'application -->
    <string name="app_name" translatable="false">ESE\'OS</string>
    <string name="version" translatable="false">0.2.6</string>

    <!-- Login -->
    <string name="welcome_message">Welcome on ESE\'OS app. Please connect with your ESEO account.</string>
    <string name="password_message">Password</string>
    <string name="mail_message">Mail address</string>
    <string name="validate">Validate</string>

    <!-- Données du Drawer -->
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_disconnect">Disconnect</string>

    <!-- Noms des différents fragments dans le Drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_client_devis">My estimates</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_members">Club\'s members</string>
    <string name="menu_about">About</string>
    <string name="menu_club_devis">Club\'s estimates</string>
    <string name="menu_inventory">Stock</string>
    <string name="menu_management">Management</string>
    <string name="menu_planning">Planning</string>


    <!-- Fragment home -->
    <string name="news">News</string>
    <string name="nathan_bons_plans">Nathan\'s good pipes</string>
    <string name="home_message">We are currently :</string>

    <!-- Fragment client_devis -->
    <string name="client_devis_canceled">Canceled</string>
    <string name="devis_in_progress">Processing…</string>
    <string name="client_devis_ready">Ready</string>
    <string name="client_devis_finished">Done</string>

    <!-- Fragment profile -->
    <string name="password_change">Change password</string>
    <string name="theme">Light theme</string>
    <string name="language_change">Change language</string>

    <!-- Fragment members -->
    <string name="president">President</string>
    <string name="vice_president">Vice-President</string>
    <string name="tresorier">Treasurer</string>
    <string name="members">Members</string>
    <string name="com_manager">Com Manager</string>

    <!-- Fragment planning -->
    <string name="tab_day_today">Today</string>
    <string name="tab_day_tomorrow">Tomorrow</string>
    <string name="any_member">Any member</string>
    <string name="member_singular">member</string>
    <string name="member_pural">members</string>
    <string name="state_open">Open</string>
    <string name="state_closed">Closed</string>
    <string name="closed_days">SaturdaySunday</string>


    <string name="title_activity_add_hour">Add a duty</string>
    <string name="textviewHourStart">Departure time</string>
    <string name="textviewHourEnd">End time</string>
    <string name="add_hour_succes">Duties added succesfully</string>

    <string name="title_activity_del_hour">Remove a duty</string>
    <string name="del_hour_succes">Duties deleted succesfully</string>
    <string name="del_hour_text">Choose duties you want to delete</string>

    <!-- Fragment about -->
    <string name="about_text">Official app of ESE\'OS. Developed by :    - Théo RICHETEZ    - Nathan DUBOIS    - Renan MALHERE.</string>
    <string name="versionWord">Version : </string>

    <!-- Fragment inventory -->

    <!-- Fragment club_devis -->
    <string name="club_devis_canceled">Canceled</string>
    <string name="club_devis_in_progress">Processing…</string>
    <string name="club_devis_ready">Ready</string>
    <string name="club_devis_finished">Done</string>

    <!-- Fragment management -->
    <string name="add_member">Add a member</string>
    <string name="del_member">Delete a member</string>
    <string name="new_year">New year</string>
    <string name="passation_confirmation_text">Are you sure of your choice ? You will not be able to change it once you have accepted.</string>
    <string name="accept">I pass on the torch</string>
    <string name="cancel">Let me check once again</string>
    <string name="handover" translatable="false">Handover</string>

    <!-- Erreurs -->
    <string name="error_no_hour" translatable="false">ErrorNoHour</string>
    <string name="error_no_member" translatable="false">ErrorNoMember</string>
    <string name="error_no_state" translatable="false">ErrorNoState</string>
    <string name="error_noname" translatable="false">ErrorNoName</string>
    <string name="error_opening_state" translatable="false">ErrorNoOpeningState</string>
    <string name="error_hellomessage" translatable="false">Bonjour Error</string>

    <string name="error_snackbar">An error has occured. Please try again</string>


    <!-- Tests -->
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
