<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.management.ManagementFragment"
    android:background="@drawable/background_gradient">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/button_add_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/button_del_member"
        android:layout_alignEnd="@id/button_del_member"
        android:layout_alignLeft="@id/button_del_member"
        android:layout_alignRight="@id/button_del_member"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/accent_gradient_corners"
        android:drawableLeft="@drawable/croix_32_white"
        android:padding="10dp"
        android:fontFamily="@font/michroma"
        android:text="@string/add_member"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button_del_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_add_member"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/accent_gradient_corners"
        android:drawableLeft="@drawable/barre_32_white"
        android:drawablePadding="10dp"
        android:fontFamily="@font/michroma"
        android:padding="10dp"
        android:text="@string/del_member"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button_new_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_del_member"
        android:layout_alignStart="@id/button_del_member"
        android:layout_alignEnd="@id/button_del_member"
        android:layout_alignLeft="@id/button_del_member"
        android:layout_alignRight="@id/button_del_member"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/accent_gradient_corners"
        android:text="@string/new_year"
        android:textColor="#FF0000"
        android:fontFamily="@font/michroma"
        android:textStyle="bold"/>



</RelativeLayout>